sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:17: error: not found: value sp
  }while (sp == true)
          ^